--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -53,6 +53,21 @@
         </div>
         <a href="#">Back to top</a>
         <!-- <hr class="featurette-divider"> -->
+        <div class="featurette" id="funding">
+          <div class="page-header">
+            <h1 class="featurette heading">Funding.<span class="muted"> Sell first, decide later.</span></h1>
+            <p class="lead">
+              <strong>Financial overhead is a worry for anyone organizing a show.</strong> When a sale occurs on 100 Motels the credit card information goes straight to our payment provider, <a href="//stripe.com">Stripe Inc.</a>, who return us a token which is encrypted and stored with the order information. Later on the token can be used to charge the customer for their order. Raising money this way has a number of advantages:
+            </p>
+            <ul class="lead">
+              <li>More secure; our servers never handle any sensitive financial information, Stripe handle all PCI compliance.</li><br>
+              <li>Better for the user; credit card information need be entered only for the first purchase, the amount to be paid is not ringfenced or 'captured' while the order is pending and orders can be cancelled up and until the organizer decides to go ahead with the event.</li><br>
+              <li>Funding without risk. As the organizer of an event you can make actual sales without incurring bank charges. You can discount tickets, reschedule or do whatever it takes to make your event viable before finally drawing down the sales monies.   </li><br>
+            </ul>
+            <p class="lead"> The provision of a risk free funding environment is vital for any speculative enterprise to succeed, organizers <em>and</em> their customers have that with 100 Motels.</p>
+          </div>
+          <a href="#">Back to top</a>
+        </div>
         <div class="featurette" id="requests">
           <div class="page-header">
             <h1 class="featurette heading">Requests.<span class="muted"> Music comes first.</span></h1>
@@ -69,7 +84,6 @@
           <a href="#">Back to top</a>
         </div>
         <div class="featurette" id="organizer">
-          <%#= image_tag "cb-black.png", class: "featurette-image pull-right img-circle" %>
           <div class="page-header"><h1 class="featurette-heading">The Organizer. <span class="muted">Put your musical opinions on Stage.</span></h1></div>
           <p class="lead">If you already spend a lot of time picking music for the benefit of other people, why not organize a show? I built 100 Motels so that anyone who wanted to do so, would have the tools to fund and organize the live performance of a Touring Artist.
             <ul class="lead">
