--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -143,7 +143,7 @@
             <% else %>
               <p>Tell us about the venue/ venues you use. Have you played them yourself? Do they book late shows? What are they, your house, a barn, a club? If links exist then link them and don't forget to puts pics and/or video in the media section opposite</p>
               <p>There's also the technical side of it, backlines, sound, engineers, whatever you think is relevant.</p>
-              <p>If you're using a music club we expect them to pay up you based on ticket sales and likely bar takings. We also expect them to allow some kind of rider for the artist, whatever way they want to work it.</p>
+              <p>If you're using a music club we expect them to pay you based on ticket sales and likely bar takings. We also expect them to allow some kind of rider for the artist, whatever way they want to work it.</p>
             <% end %>
           </div>
           <div class="tab-pane" id="travel">
