--- a/app/views/promoter/events/show.html.erb
+++ b/app/views/promoter/events/show.html.erb
@@ -19,9 +19,9 @@
   <div class="span12">
     <%= will_paginate @orders %>
 
+    <%= form_tag  charge_multiple_orders_path, method: :post  do %>
       <div class="option-buttons">
         <% if current_user.profile && current_user.profile.api_key %>
-          <%= link_to "Discount Tickets", "#modal-discount", class: "btn btn-warning", data: {toggle: "modal"}, id: "discount" %>
           <%= link_to "Charge Selected", "#modal-charge", class: "btn btn-success", data: {toggle: "modal"}, id: "charge" %>
           <%= submit_tag "Refund Selected", name: 'refund', class: "btn btn-danger", id: "refund" %>
         <% elsif current_user.profile %>
@@ -30,7 +30,6 @@
         <%= link_to "Generate pdf", promoter_event_path(@event, format: "pdf"), class: "btn" %>
       </div>
       <%= hidden_field_tag "promoter", current_user.profile.id %>
-      <%= hidden_field_tag :ticket_discount %>
       <table class="table table-striped table-bordered" id="promoter-customers">
         <thead>
           <tr>
@@ -76,20 +75,4 @@
     </div>
     <% end %>
   </div>
-</div>
-<div class="modal hide fade" id="modal-discount">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3>Discount Tickets</h3>
-  </div>
-  <div class="modal-body">
-    <%= form_tag  [:promoter, @event], method: :put, class: "form-horizontal" do %>
-     <%= text_field_tag :ticket_discount, nil, placeholder: "  -10%", class: "span1" %>
-     <span class="help-block">Enter a negative percentage discount value.</span>
-  </div>
-  <div class="modal-footer">
-    <a href="#" class="btn" data-dismiss="modal">Cancel</a>
-    <%= submit_tag "Apply Discount", class: "btn btn-large btn-warning" %>
-  </div>
-  <% end %>
 </div>
