fees and charges

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@
 					<div class="span4">
 	          <!-- <img class="img-circle" src="http://placehold.it/140x140"> -->
 	          <h2>A World Tour</h2>
-	          <p>A single fan in a particular city is potentially a show. I want to give anyone a chance to organize a tour date for an Artist. We'll keep out the hustlers and conmen, and you will never have to pay to play. </p> <br>
+	          <p>100 Motels gives anyone a chance to organize a tour date for an Artist they like, and gives Artists a resource where they can find an organizer for a location where they have fans. </p><br>
 	          <p align="center"><a class="btn" href="#">Learn More »</a></p>
 	        </div>
 				</div> <!-- /headlines -->
@@ -219,9 +219,9 @@
 			          <li><%= link_to "Funding", info_path(anchor: "funding") %></li>
 			          <li><%= link_to "Requests", info_path(anchor: "requests") %></li>
 			          <li><%= link_to "Attending", info_path(anchor: "attending") %></li>
-			          <br>
+			          <li><%= link_to "Fees and Charges", info_path(anchor: "money") %></li>
 			          <li class="divider"></li>
-			          <br>
+
 			        </ul>
 			        <div class="btn-group center">
 								<a href="#invite" class="btn btn-block btn-large btn-primary" data-toggle="modal">Request Invite</a>
