--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -110,6 +110,16 @@
            </ul>
         </div>
 
+        <div class="featurette" id="money">
+          <h1 class="featurette-heading">Fees and Charges. <span class="muted">Harnessing Stripe's powerful Api.</span></h1><br>
+          <div class="lead">
+            <p>100 Motels uses Stripe's payment infrastructure to operate a type of marketplace in terms of how cash is handled. </p>
+            <p>Each organizer must connect their 100 Motels accounts with Stripe in order to accept cash for their events. This is a simple process and a normal checking account will suffice.</p>
+            <p>When an organizer decides to draw down money from their ticket sales, they are paid directly into their bank account minus Stripe's fees (2.9% + 30c per transaction) and 100 Motel's fee (undetermined but crowdfunding services tend to charge between 5% and 7% currently). These fees are non-refundable. </p>
+            <p>Organizers are currently restricted to holders of <strong>American or Canadian</strong> bank accounts, unfortunately there is service comparable to Stripe available outside of North America.</p>
+          </div>
+        </div>
+
         <hr class="featurette-divider">
         <a href="#">Back to top</a>
         <!-- /END THE FEATURETTES -->
