--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -233,7 +233,7 @@
 								<br>
 								<p>Artists can do three things on 100 Motels: Add a playlist of their music; make a tour request; make a support request. If they end up playing a show, everything bar the performance will be taken care of by the organizer. It's just like the pro's, except you don't have to make commercial music to play.<strong> You will never pay to play.</strong></p> <br>
 							  <p>Anyone who has a credit card can organize, but it will be controlled until the service matures. The first organizers will be radio hosts, bloggers and other proven contributers to music without profit who naturally command a crowd. Check out the organizers in this demo, all people who I discovered through my music.</p> <br>
-								<p>Along with offloading the organizational burden from the artist there were two other pillar issues that precipitated the idea for 100 Motels: Risk and Attendance. You can fund a 100 Motels show without incurring any costs until you're happy with the attendance. There no time-frame outside of what you decide yourself - dates and prices can be altered without penalty. </p> <br>
+								<p>Along with offloading the organizational burden from the artist there were two other pillar issues that precipitated the idea for 100 Motels: Risk and Attendance. You can fund a 100 Motels show without incurring any costs until you're happy with the attendance. There's no time-frame outside of what you decide yourself - dates and prices can be altered without penalty. </p> <br>
 							</blockquote>
 							<p class="pull-right"><a href="#">back to top</a></p>
 						</div>
