info page rewritten

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -72,10 +72,9 @@
   padding-top: 30px;
 }
 
-.featurette-image.pull-left,
-.featurette-image.pull-right {
-  display: block;
-  float: none;
-  max-width: 40%;
-  margin: 0 auto 20px;
+.zappa {
+  h1  {
+    padding-top: 30px;
+    padding-bottom: 20px;
+  }
 }
