--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -4,119 +4,125 @@
         <ul class="nav nav-list well" >
           <li class="nav-header">About the Founder</li>
 
-          <li class="#"><a href="#">personal info</a></li>
-          <li><a href="#">WIP</a></li>
-          <li><a href="#">hiring</a></li>
-          <li><a href="//github.com/seocahill">github</a></li>
-          <li><a href="//seocahill.com">blog</a></li>
+          <li><a href="//github.com/seocahill">Github</a></li>
+          <li><a href="//seocahill.com">Blog</a></li>
           <li class="nav-header">About 100 Motels</li>
 
+          <li><a href="#how">How it Works</a></li>
           <li><a href="#artist">Artists</a></li>
-          <li><a href="#organizer">Organizing a Show</a></li>
-          <li><a href="#attending">Supporting a Show</a></li>
+          <li><a href="#organizing">Organizing a Show</a></li>
+          <li><a href="#attending">Attending a Show</a></li>
           <li><a href="#requests">Requests</a></li>
-
-          <li class="nav-header">Technical info</li>
-          <li><a href="#">Development</a></li>
-          <li><a href="#">Testing</a></li>
-          <li><a href="#">Security</a></li>
-
-          <li class="nav-header">Customer info</li>
-          <li><a href="#">Legal</a></li>
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#money">Funding</a></li>
         </ul>
     </div> <!-- /span3 -->
     <div class="span9">
       <!-- 100 Motels poster -->
       <section id="intro">
-        <div class="">
+        <div class="zappa">
           <img src="http://www.zappa.com/stufftoget/wallpaper/images/downloads/200_Motels_1024.jpg" class="img-rounded">
             <p class="pull-right img-circle">
               <small>&copy; <a href="http://www.zappa.com/stufftoget/wallpaper/index.html">Zappa.com</a></small>
             </p>
             <br>
-          <h3><span class="muted">Hi, I'm Seosamh and I developed 100 Motels.</span></h2>
-          <p class="lead">My experience in music has inspired me to try and change some things, and this is my first cut at it. The focus of 100 Motels is live musical performance, specifically touring. If you're curious about my background, my thoughts on music, web development or anything else check out <a href="//seocahill.com">my blog</a>.  </p>
+          <h1>Hi, I'm Seosamh. <span class="muted">I developed 100 Motels.</span></h1>
+          <p class="lead">My experience in music with <a href="//creteboom.com">my own band</a> inspired me to try and change some things. </p>
+          <p class="lead">My music has been listened to by more than a million people in ninety countries spread over five continents, but I've only ever played outside of my home city twice. 100 Motels is my attempt to fix that. </p>
+          <p class="lead">If you're curious about my background, my thoughts on music, web development or anything else check out <a href="//seocahill.com">my blog</a>.  </p>
         </div>
       </section>
+      <hr>
       <!-- The Big IDea -->
       <!-- <div class="container marketing"> -->
 
         <!-- START THE FEATURETTES -->
 
         <div class="featurette">
-          <div class="page-header"><h1 class="featurette-heading" id="artist">The Artist. <span class="muted">Concentrate on Performing.</span></h1></div>
-          <p class="lead"><strong>PR, lobbying or industry experience is irrelevant on 100 Motels.</strong> Music decides, there is no other consideration. So make recordings you like, get them out into the commons and then practice your performance. </p>
-          <p class="lead">After you sign up add a music or video playlist to your profile. Look through local events for a support slot, or organizer profiles if you're looking to tour a particular location. To register your interest just click the request button on the event/organizer profile page. The organizer will receive a private message with your media and contact email. You can track and cancel all requests in your user account. </p>
-          <p class="lead">If you receive an offer to tour from an Organizer you need to agree a sales target to cover your costs, once that's done you can expect the Organizer to handle everything else. </p>
+          <div class="page-header"><h1 class="featurette-heading" id="how"><span class="muted">How it Works</span></h1></div>
+          <ul class="lead">
+              <li>Before you can organize a show, we need to verify your identity. We do this through our payments provider, <a href="//stripe.com">Stripe</a>, with whom you must register.</li><br>
+              <li>There are no fees charged for tickets sales, allowing you to try out potential events without taking on any risk. Have a go, you really have nothing to lose.</li><br>
+              <li>When you are satisifed that a show is properly funded, you can request payment. Sales monies are deposited into your bank account seven days after you make the request, minus 100 Motel's and Stripe's fees which are non-refundable.</li><br>
+              <li>We provide you with a mobile application, Doorman, for tracking admissions on the night of the show. </li> <br>
+              <li>By using 100 Motels you agree to abide by the rules of service which are primarily in the interest of the artists. We reserve the right to refund all your ticket sales and/or suspend your account if you fail to do so.</li>
+            </ul>
         </div>
         <a href="#">Back to top</a>
-        <!-- <hr class="featurette-divider"> -->
-        <div class="featurette" id="funding">
-          <div class="page-header">
-            <h1 class="featurette heading">Funding.<span class="muted"> Sell first, decide later.</span></h1>
-            <p class="lead">
-              <strong>Financial overhead is a worry for anyone organizing a show.</strong> When a sale occurs on 100 Motels the credit card information goes straight to our payment provider, <a href="//stripe.com">Stripe Inc.</a>, who return us a token which is encrypted and stored with the order information. Later on the token can be used to charge the customer for their order. Raising money this way has a number of advantages:
-            </p>
-            <ul class="lead">
-              <li>More secure; our servers never handle any sensitive financial information, Stripe handle all PCI compliance.</li><br>
-              <li>Better for the user; credit card information need be entered only for the first purchase, the amount to be paid is not ringfenced or 'captured' while the order is pending and orders can be cancelled up and until the organizer decides to go ahead with the event.</li><br>
-              <li>Funding without risk. As the organizer of an event you can make actual sales without incurring bank charges. You can discount tickets, reschedule or do whatever it takes to make your event viable before finally drawing down the sales monies.   </li><br>
+
+        <div class="featurette">
+          <div class="page-header"><h1 class="featurette-heading" id="artist"><span class="muted">Artists</span></h1></div>
+          <p class="lead"><strong>100 Motels <em>raison d'etre</em> is to help you play more shows, at home and away.</strong> My own belief is that for you to reach your full artistic potential you need to be able to concentrate on writing, recording and performing - not easy for an independent. 100 Motels reflects that belief, here's all you can do: </p>
+          <ul class="lead">
+              <li>First off add some media (a video or soundcloud playlist showcasing your work) to your user account. You need this to make <a href="#requests">show requests.</a></li><br>
+              <li>If you're looking to go on tour, browse the Organizer listings for that location. When you find someone suitable click the <a href="#requests">request tour</a> button.</li><br>
+              <li>If you're looking to support another Artist touring your city, click the <a href="#requests">request support</a> button on that event's homepage.</li><br>
+              <li>You probably already have fans that are waiting for you to play their hometown. They can sign up for an Organizer account and have a go at funding your event that way.</li><br>
             </ul>
-            <p class="lead"> The provision of a risk free funding environment is vital for any speculative enterprise to succeed, organizers <em>and</em> their customers have that with 100 Motels.</p>
-          </div>
-          <a href="#">Back to top</a>
-        </div>
-        <div class="featurette" id="requests">
-          <div class="page-header">
-            <h1 class="featurette heading">Requests.<span class="muted"> Music comes first.</span></h1>
-            <p class="lead">
-              <strong>Artists in general, have to do way too much.</strong> Especially leading up to a big show this can have a major impact on the performance. So I designed 100 Motels to have as minimal a requirement for Artist participation as possible. Show requests are like that, there are three basic steps:
-            </p>
-            <ul class="lead">
-              <li>Sign up for a normal user account and then add Artist media in your User Account Settings</li><br>
-              <li>You will see a 'Request Support' button at the top of every Event page, click it and the Organizer of that event will recieve your request to play as a support act for that event along with your supplied media and contact details.</li><br>
-              <li>Likewise if you are browsing Organizer profiles you will see "Request Tour" instead. Again the Organizer will receive your media and contact details. </li><br>
-            </ul>
-            <p class="lead"> Should your request be successful you will be contacted by the Organizer, you can follow the status of you requests by checking your user account.</p>
-          </div>
-          <a href="#">Back to top</a>
-        </div>
-        <div class="featurette" id="organizer">
-          <div class="page-header"><h1 class="featurette-heading">The Organizer. <span class="muted">Put your musical opinions on Stage.</span></h1></div>
-          <p class="lead">If you already spend a lot of time picking music for the benefit of other people, why not organize a show? I built 100 Motels so that anyone who wanted to do so, would have the tools to fund and organize the live performance of a Touring Artist.
-            <ul class="lead">
-              <li>You're free to pick your own touring Artists and local support or to choose from your private request messages.</li><br>
-              <li>You get mobile ticketing and risk-free crowd-funding for you event.</li><br>
-              <li>All sales monies are deposited directly into your account, 7 days after you decide to draw down payment.</li><br>
-              <li>How much profit you take is between you and the Artist but bear in mind  <strong> that the Artist must never pay to play.</strong></li><br>
-            </ul>
-          </p>
+          <p class="lead">You'll need to figure out a sales target and a timeframe with your organizer. Your next involvement after that, assuming the show is funded successfully, will be on stage.  </p>
         </div>
         <a href="#">Back to top</a>
-        <hr class="featurette-divider">
+
+        <div class="featurette">
+          <div class="page-header"><h1 class="featurette-heading" id="organizing"><span class="muted">Organizing a Show</span></h1></div>
+          <p class="lead"><strong>100 Motels gives everyone the chance to organize a live show for any artist of their choosing.</strong> There are no minimum requirments for the type of venue, crowd-size or equipment/production standards. As long as the artist is happy, we're happy. Here's what's involved: </p>
+          <ul class="lead">
+              <li>Before you start you need to establish a baseline cost for your events. Some expenses will vary by show (travel costs), others will be relatively predictible (venue/equipment hire, accommodation). Check out your <%= link_to "public profile", profiles_path %> for a guideline on what you need to consider and personalise it as you see fit.</li><br>
+              <li>In terms of funding - how much of costs you look to cover with ticket sales, how profits are split, how expenses are paid - these decisions are entirely up to you and the artist.</li><br>
+              <li>You can draw down sales monies to your bank account anytime you like, but once you do you bear the financial risk of refunds, chargebacks and cancellations. Don't do this until you're sure the show will go ahead! </li><br>
+              <li>All sales monies are deposited in your bank account, seven days after they are requested.</li><br>
+              <li>You are required to organize transport and accommodation for the artist.</li><br>
+              <li>You, or someone acting on your behalf, are required to meet the artists when they arrive and look after them until they depart. </li><br>
+            </ul>
+            <p class="lead">We reserve the right to cancel an event and refund all customers if our terms and conditions are not observed. Our aim is to protect artists and customers while respecting your right to profit from the show. Organizers who misuse the service will bear the cost of customer refunds and will be prohibited from organizing shows in the future.</p>
+        </div><br>
+        <a href="#">Back to top</a>
+
+
 
         <div class="featurette" id="attending">
           <%#= image_tag "cb-black.png", class: "featurette-image pull-right img-circle" %>
-          <h1 class="featurette-heading">Attending. <span class="muted">The only rule is that no one gets ripped off.</span></h1>
-          <p class="lead">Buying tickets on 100 Motels is a pain-free experience. </p>
+          <div class="page-header"><h1 class="featurette-heading"> <span class="muted">Attending a Show</span></h1></div>
+          <p class="lead">Here's what you need to know. </p>
           <ul class="lead">
-            <li>There are no ads, promotions or hidden charges.</li><br>
-             <li><strong>We never see your payment information</strong>, all credit card processing is handled directly by our payments provider, Stripe.</li><br>
-             <li>You can save a user account at any time when making a purchase but it's not necessary. If you choose to create an account you can purchase tickets with a saved credit card (one mouse-click) and also track and cancel existing orders.</li><br>
+            <li>You can buy tickets with or without signing up for a user account.</li><br>
+            <li>Your card may not be charged immediately depending on whether the event has reached its funding target.</li><br>
+             <li>Your tickets are emailed to you when your card is charged.</li><br>
+             <li>You are free to cancel your order up and until tickets are issued for the show.</li><br>
              <li>You don't have to print anything, the barcoded email receipt on your phone is your ticket. </li><br>
              <li>If the event is cancelled for some reason, you get a refund of the full ticket price.</li><br>
            </ul>
+           <p class="lead">Signing up for a user account enables you to:</p>
+            <ul class="lead">
+              <li>Track your order history</li><br>
+              <li>Save a credit card for one click purchases</li><br>
+              <li>Add <a href="#artist">artist services</a>.</li><br>
+            </ul>
+        </div><br>
+        <a href="#">Back to top</a>
+
+        <div class="featurette" id="requests">
+          <div class="page-header">
+           <div class="page-header"> <h1 class="featurette heading"><span class="muted">Requests</span></h1></div>
+            <p class="lead">
+              <strong>Artists in general, have to do way too much.</strong> Especially leading up to a big show you don't want to distract from the performance. So I designed 100 Motels to have as minimal a requirement for Artist participation as possible. Show requests are like that, there are three basic steps:
+            </p>
+            <ul class="lead">
+              <li>Sign up for a normal user account and then add 'artist media' on the settings page. You can add a vimeo, youtube or soundcloud playlist here.</li><br>
+              <li>You will see a 'Request Support' button at the top of every individual event page, click it and the organizer will recieve your request to play as a <strong>support act</strong> for that event along with your supplied media and contact details.</li><br>
+              <li>Likewise if you are browsing organizer profiles with a view to going on tour, you will see a "Request Tour" button. Again the organizer will receive your media and contact details. </li><br>
+            </ul>
+            <p class="lead"> You can track the status of you requests and/or cancel them on your user account page.</p>
+          </div>
+          <a href="#">Back to top</a>
         </div>
 
         <div class="featurette" id="money">
-          <h1 class="featurette-heading">Fees and Charges. <span class="muted">Harnessing Stripe's powerful Api.</span></h1><br>
+          <div class="page-header"><h1 class="featurette-heading"><span class="muted">Fees and Charges</span></h1><br></div>
           <div class="lead">
-            <p>100 Motels uses Stripe's payment infrastructure to operate a type of marketplace in terms of how cash is handled. </p>
+            <p>100 Motels uses Stripe's payment infrastructure to operate a marketplace for organizers, artists and their customers. </p>
             <p>Each organizer must connect their 100 Motels accounts with Stripe in order to accept cash for their events. This is a simple process and a normal checking account will suffice.</p>
             <p>When an organizer decides to draw down money from their ticket sales, they are paid directly into their bank account minus Stripe's fees (2.9% + 30c per transaction) and 100 Motel's fee (undetermined but crowdfunding services tend to charge between 5% and 7% currently). These fees are non-refundable. </p>
-            <p>Organizers are currently restricted to holders of <strong>American or Canadian</strong> bank accounts, unfortunately there is service comparable to Stripe available outside of North America.</p>
+            <p>Organizers are currently restricted to holders of <strong>American or Canadian</strong> bank accounts. Unfortunately there is no service comparable to Stripe available outside of North America at the present time.</p>
           </div>
         </div>
 
